--- a/installer/resources/themes/snark/vanilla/snark.css
+++ b/installer/resources/themes/snark/vanilla/snark.css
@@ -270,6 +270,8 @@ td:first-child {
 
 .snarkTorrentStatus {
      padding: 1px 0 2px;
+     font-size: 8pt !important;
+     letter-spacing: -0.05em;
 }
 
 .snarkTorrentStatus:first-child {
@@ -282,7 +284,7 @@ td:first-child {
 }
 
 .snarkTorrentStatus:first-child img {
-     margin-right: 0px !important;
+     margin-right: 10px !important;
 }
 
 .snarkTorrentRateUp, .snarkTorrentRateDown, .snarkTorrentDownloaded, .snarkTorrentUploaded {
